# vibecode

./: LICENSE
algdat/: CMakeLists.txt  bst.cpp  bst.h  bst_test.cpp  linked_list.cpp  linked_list.h  linked_list_test.cpp
fancydir/: CMakeLists.txt  main.cpp
fm.c/: Makefile  a.out  build.sh  fm  fm.c
gorest/: README.md  go.mod  main.go  startup.sh
gorest/frontend/: app.js  index.html  styles.css
helloworld-os/: Makefile  README.md  boot.asm  boot.img  build.bat
raycaster/: README.md  index.html  raycaster.js  styles.css
w32fm/: CMakeLists.txt  w32fm_fs.cpp  w32fm_fs.h  w32fm_main.cpp  w32fm_model.cpp  w32fm_model.h  w32fm_ui.cpp  w32fm_ui.h  w32fm_viewer.cpp  w32fm_viewer.h
wingrep/: CMakeLists.txt  README  main.c
